Fixed errors - SonarQube fix